--- a/FastScreener.csproj
+++ b/FastScreener.csproj
@@ -8,6 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
 	<ApplicationIcon>scr.ico</ApplicationIcon>
 	<PackageIcon>scr.png</PackageIcon>
+	<EnableDynamicLoading>true</EnableDynamicLoading>
+	<StartupObject>screener3.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +17,11 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Properties\Settings.Designer.cs">
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
   </ItemGroup>
 
@@ -26,6 +33,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
     <None Update="scr.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
