--- a/App.config
+++ b/App.config
@@ -10,5 +10,7 @@
 		<add key="draw_guidlines" value="false" />
 		<add key="draw_arrows" value="false" />
 		<add key="guidline_type" value="1" />
+		<add key="arrows_type" value="1" />
+		<add key="res_on_close" value="600,600" />
 	</appSettings>
 </configuration>
