add custom grid

--- a/App.config
+++ b/App.config
@@ -12,5 +12,6 @@
 		<add key="guidline_type" value="1" />
 		<add key="arrows_type" value="1" />
 		<add key="res_on_close" value="600,600" />
+		<add key="custom_grid" value="10,10,10,10" />
 	</appSettings>
 </configuration>
