--- a/App.config
+++ b/App.config
@@ -13,5 +13,6 @@
 		<add key="arrows_type" value="1" />
 		<add key="res_on_close" value="600,600" />
 		<add key="custom_grid" value="10,10,10,10" />
+		<add key="ident_value_lock" value="false" />
 	</appSettings>
 </configuration>
