add save to file

--- a/App.config
+++ b/App.config
@@ -14,5 +14,6 @@
 		<add key="res_on_close" value="600,600" />
 		<add key="custom_grid" value="10,10,10,10" />
 		<add key="ident_value_lock" value="false" />
+		<add key="save_to_file" value="false" />
 	</appSettings>
 </configuration>
