add arow length and about

--- a/App.config
+++ b/App.config
@@ -11,9 +11,11 @@
 		<add key="draw_arrows" value="false" />
 		<add key="guidline_type" value="1" />
 		<add key="arrows_type" value="1" />
+		<add key="arrow_lenght" value="50" />
 		<add key="res_on_close" value="600,600" />
 		<add key="custom_grid" value="10,10,10,10" />
 		<add key="ident_value_lock" value="false" />
 		<add key="save_to_file" value="false" />
+		
 	</appSettings>
 </configuration>
