--- a/App.config
+++ b/App.config
@@ -9,6 +9,8 @@
 		<add key="arrow_color" value="#00ffff" />
 		<add key="draw_guidlines" value="false" />
 		<add key="draw_arrows" value="false" />
+		<add key="draw_number" value="false" />
+		<add key="number_color" value="#00ffff" />
 		<add key="guidline_type" value="1" />
 		<add key="arrows_type" value="1" />
 		<add key="arrow_lenght" value="50" />
