add number size

--- a/App.config
+++ b/App.config
@@ -10,7 +10,8 @@
 		<add key="draw_guidlines" value="false" />
 		<add key="draw_arrows" value="false" />
 		<add key="draw_number" value="false" />
-		<add key="number_color" value="#00ffff" />
+		<add key="number_color" value="#ffc000" />
+		<add key="number_size" value="26" />
 		<add key="guidline_type" value="1" />
 		<add key="arrows_type" value="1" />
 		<add key="arrow_lenght" value="50" />
