--- a/App.config
+++ b/App.config
@@ -17,6 +17,10 @@
 		<add key="arrow_lenght" value="50" />
 		<add key="res_on_close" value="600,600" />
 		<add key="custom_grid" value="10,10,10,10" />
+		<add key="draw_frame" value="false" />
+		<add key="frame_color" value="#ffc000" />
+		<add key="frame_width" value="64" />
+		<add key="frame_height" value="64" />
 		<add key="ident_value_lock" value="false" />
 		<add key="save_to_file" value="false" />
 		
